Add timer to Promotion section UI

--- a/src/app/_components/Categories/index.module.scss
+++ b/src/app/_components/Categories/index.module.scss
@@ -22,6 +22,10 @@
   padding: 0;
   grid-template-columns: repeat(3, 1fr);
 
+  @include mid-break {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
   @include small-break {
     grid-template-columns: 1fr;
   }
