--- a/src/app/_components/Radiobutton/index.module.scss
+++ b/src/app/_components/Radiobutton/index.module.scss
@@ -1,6 +1,6 @@
 @import '../../_css/common';
 
-.checkboxWrapper {
+.radioWrapper {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -8,29 +8,33 @@
   cursor: pointer;
 }
 
-.checkbox {
+.radio {
   -webkit-appearance: none;
   appearance: none;
   width: 20px;
   height: 20px;
-  border-radius: 4px;
+  border-radius: 50%;
   background-color: white;
   border: 2px solid var(--color-dark-500);
   outline: none;
   cursor: pointer;
 }
 
-.checkbox:checked {
-  background-color: var(--color-dark-500);
+.radio:checked {
+  font-size: 16px;
+  background-color: white;
   position: relative;
 }
 
-.checkbox:checked::before {
-  content: '\2713';
-  font-size: 14px;
-  font-weight: bold;
-  color: #fff;
+.radio:checked::before {
+  content: "";
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: var(--color-dark-500);
   position: absolute;
-  right: 5px;
-  top: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
